--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+/target/** 
+!target/deploy/
+target/deploy/*.so
+!target/deploy/lucky_trading-keypair.json
+!target/idl/
+!target/idl/lucky_trading.json
+!target/types/
+!target/types/lucky_trading.ts
+
+
 .anchor
 .DS_Store
 target
