--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "@coral-xyz/anchor": "^0.29.0",
         "@project-serum/anchor": "^0.26.0",
         "@solana/spl-token": "^0.4.12",
-        "@solana/web3.js": "^1.98.0"
+        "@solana/web3.js": "^1.98.0",
+        "dotenv": "^16.4.7"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
