--- a/Anchor.toml
+++ b/Anchor.toml
@@ -18,5 +18,6 @@ wallet = "~/.config/solana/id.json"
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/test_local.ts"
 create_vault = "ts-node scripts/create_vault.ts"
+create_vault_mainnet = "ts-node scripts/create_vault_mainnet.ts"
 [test]
 startup_wait = 2000
